--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,4 +37,10 @@ dependencies {
     compile 'com.android.support:design:23.2.0'
     compile 'me.tatarka.bindingcollectionadapter:bindingcollectionadapter:1.1.0'
     compile 'me.tatarka.bindingcollectionadapter:bindingcollectionadapter-recyclerview:1.1.0'
+    compile 'com.google.android.agera:agera:1.0.0-RC1'
+    compile 'com.google.android.agera:content:1.0.0-RC1'
+    compile 'com.google.android.agera:database:1.0.0-RC1'
+    compile 'com.google.android.agera:net:1.0.0-RC1'
+    compile 'com.google.android.agera:rvadapter:1.0.0-RC1'
+    compile 'com.google.android.gms:play-services-appindexing:8.1.0'
 }
