实现音效空间基本显示和动画变化功能

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,8 +19,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".mvvm.LoginActivity" />
-        <activity android:name=".view.QQHealthActivity"></activity><!-- ATTENTION: This was auto-generated to add Google Play services to your project for
-     App Indexing.  See https://g.co/AppIndexing/AndroidStudio for more information. -->
+        <activity android:name=".view.QQHealthActivity"></activity>
+        <activity android:name=".view.EqualizerActivity"></activity>
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
