集成 leakcanary，检测内存泄露

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,4 +43,8 @@ dependencies {
     compile 'com.google.android.agera:net:1.0.0-RC1'
     compile 'com.google.android.agera:rvadapter:1.0.0-RC1'
     compile 'com.google.android.gms:play-services-appindexing:8.1.0'
+
+    debugCompile 'com.squareup.leakcanary:leakcanary-android:1.4-beta2'
+    releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.4-beta2'
+    testCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.4-beta2'
 }
