--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,8 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        android:name=".MyApplication">
+        android:name=".MyApplication"
+        android:hardwareAccelerated="false">
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
@@ -22,6 +23,7 @@
         <activity android:name=".mvvm.LoginActivity" />
         <activity android:name=".view.QQHealthActivity"></activity>
         <activity android:name=".view.EqualizerActivity"></activity>
+        <activity android:name=".view.WaveformActivity"></activity>
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
